# holophonor

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py  sync-labels.json
.github/: release.yml
.github/workflows/: CI.yml  lint.yml  publish.yml
holophonor/: __init__.py  constants.py  daw.py  exceptions.py  freewheeling.py  holospecs.py  launchpadMK2.py  launchpadS.py  launchpadX.py  lib.py  main.py  pipewire.py  qsynth.py
src/: fweelin_core.cc  fweelin_core.h  fweelin_core_dsp.cc  fweelin_core_dsp.h
