[project]
name = "holophonor"
dynamic = ["version"]
description = "Live looping, unlimited!"
authors = [
    {name = "Quaternion Media", email = "holophonor@quaternion.media"},
]
dependencies = [
    "pluggy<1.1,>=1.0.0",
    "python-rtmidi<1.5,>=1.4.9",
    "loguru>=0.6.0",
]
requires-python = ">=3.8.1, < 4"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
holophonor = "holophonor.main.py"


[tool.pdm]
version = { source = "file", path = "holophonor/_version.py" }


[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

