[project]
name = "holophonor"
dynamic = ["version"]
description = "Live looping, unlimited!"
authors = [{ name = "Quaternion Media", email = "holophonor@quaternion.media" }]
dependencies = ["pluggy~=1.0", "python-rtmidi~=1.4", "loguru~=0.6", "pipewire-python>=0.2.3", "psutil>=7.0.0"]
requires-python = ">=3.8.1, < 4"
readme = "README.md"
license = { text = "MIT" }

[project.scripts]
holophonor = "holophonor.main:main"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.ruff]
ignore = [
    # line too long
    "E501",
    # Ambiguous variable names
    "E741",
    # imported but unused
    "F401",
    # star imports
    "F403",
    "F405",
]

[tool.pdm]
version = { source = "file", path = "holophonor/_version.py" }


[dependency-groups]
dev = ["black>=24.8.0"]
